--- a/templates/exam/navbar.html
+++ b/templates/exam/navbar.html
@@ -26,7 +26,7 @@
         margin: 0px;
       }
       .bg-dark {
-        background-color: #212529 !important;
+        background-color: white;
       }
       .navbar-brand {
         font-size: 20px;
@@ -43,7 +43,7 @@
         transition: 1s ease-in-out;
       }
       .nav-item:hover{
-        color:#576fe8;
+        color:#9ef4d9;
         font-style: normal;
       }
     </style>
@@ -60,9 +60,9 @@
     <div class="bs-example">
       <nav
         class="navbar navbar-expand-md navbar-dark fixed-top"
-        style="background-color: #212529"
+        style="background-color: #e6e6e6; color: black;"
       >
-        <a style="color: #ffffff; text-decoration: none" href="/"
+        <a style="color: black; text-decoration: none; font-weight: 500;" href="/"
           ><font size="5">Online Assessment</font><br
         /></a>
         <button
@@ -77,21 +77,22 @@
         <div
           class="collapse navbar-collapse justify-content-between"
           id="navbarCollapse"
+          
         >
           <div class="navbar-nav"></div>
 
-          <div class="navbar-nav">
-            <a style="padding-left: 30px" href="/" class="nav-item nav-link">
+          <div class="navbar-nav" >
+            <a style="padding-left: 30px; color: black; font-weight: 500;" href="/" class="nav-item nav-link">
               Home</a
             >
-            <a href="/teacher/teacherclick" class="nav-item nav-link"
+            <a href="/teacher/teacherclick" class="nav-item nav-link" style="color: black; font-weight: 500;"
               >Teacher</a
             >
-            <a href="/student/studentclick" class="nav-item nav-link"
+            <a href="/student/studentclick" class="nav-item nav-link"style="color: black; font-weight: 500;"
               >Student</a
             >
-            <a href="/adminclick" class="nav-item nav-link">Admin</a>
-            <a href="/contactus" class="nav-item nav-link">Contact</a>
+            <a style="color: black; font-weight: 500;" href="/adminclick" class="nav-item nav-link">Admin</a>
+            <a style="color: black; font-weight: 500;" href="/contactus" class="nav-item nav-link">Contact</a>
           </div>
         </div>
       </nav>
