--- a/templates/student/studentclick.html
+++ b/templates/student/studentclick.html
@@ -22,6 +22,7 @@
     <style media="screen">
       * { --nav-height: 0px;
         font-family: "Poppins",sans-serif;
+        color: black;
       }
       /* .display-4,
       .lead {
@@ -42,22 +43,22 @@
       .btn-first {
         width: 10%;
         text-align: center;
-        padding: 0.35rem;
+        padding: 0.5rem;
         border-style: solid;
         border-width: 1px;
         border-color: transparent;
         border-radius: 0.3rem;
-        background-color: rgb(87, 111, 232);
+        background-color: black;
         transition-property: color, rgb(87, 111, 232);
         transition-duration: 250ms, 250ms;
         transition-timing-function: ease, cubic-bezier(0.645, 0.045, 0.355, 1);
-        color: rgb(0, 0, 0);
+        color: white;
         font-size: 1rem;
       }
       .btn-first:hover {
-        border-color: rgb(255, 255, 255);
-        background-color: transparent;
-        color: rgb(255, 255, 255);
+        border-color: none;
+        background-color: white;
+        color: black;
         text-decoration: none;
       }
 
@@ -70,7 +71,7 @@
       }
 
       .auth-div {
-        background-color: rgb(27, 27, 27);
+        background-color: #9ef4d9;
         text-align: center;
         padding: 2rem 2rem;
         border-radius: 5px;
