--- a/templates/teacher/teacher_dashboard.html
+++ b/templates/teacher/teacher_dashboard.html
@@ -85,7 +85,7 @@
   <div class="container">
     <div class="row">
       
-        <div class=" col-md-4 col-xl-6 mt-5 rounded" ;">
+        <div class=" col-md-4 col-xl-6 mt-5 rounded">
             <div class="card-effect card bg-c-gtx order-card">
               <div class="card-block">
                 <h5 class="total m-b-20 mb-4">Registered Students </h5>
@@ -116,9 +116,6 @@
       </div>
     </div>
   </div>
-
-
-<br><br><br><br><br><br><br><br><br><br>
 
 <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 </body>
