--- a/templates/exam/adminlogin.html
+++ b/templates/exam/adminlogin.html
@@ -11,10 +11,11 @@
     <style media="screen">
       * {
     font-family: "Poppins",sans-serif;
+    color: black;
 }
 
 .body-style{
-    background-color: black;
+    background-color: #060b27;
 }
 
  .btn-first {
@@ -24,18 +25,19 @@
     border-width: 1px;
     border-color: transparent;
     border-radius: 0.3rem;
-    background-color: rgb(87, 111, 232);
+    background-color:black ;
     transition-property: color, rgb(87, 111, 232);
     transition-duration: 250ms, 250ms;
     transition-timing-function: ease, cubic-bezier(0.645, 0.045, 0.355, 1);
-    color: rgb(0, 0, 0);
+    color: white;
     font-size: 1rem;
     }
     .btn-first:hover{
-      border-color: rgb(255, 255, 255);
-    background-color: transparent;
-    color: rgb(255, 255, 255);
+      border-color: none;
+    background-color: white;
+    color: black;
     text-decoration: none;
+    font-weight: 500;
     }
     
 .auth-wrapper {
@@ -49,7 +51,7 @@
 }
 
 .auth-div {
-  background-color: rgb(27, 27, 27);
+  background-color: #9ef4d9;
   text-align: center;
   padding: 3rem 5rem;
   border-radius: 10px;
@@ -101,12 +103,12 @@ form{
     <div class="auth-wrapper">
     <div class="auth-div animate__animated animate__fadeInDown animate__delay-1s">
 
-                <h1 style="font-family: Poppins,sans-serif; color: white;">Admin <span style="color:rgb(87, 111, 232) ; margin-top: 2rem;" >Login</span> Form</h1>
+                <h1 style="font-family: Poppins,sans-serif; ">Admin <span style="color:rgb(87, 111, 232) ; margin-top: 2rem;" >Login</span> Form</h1>
                 <form class="box" method="post">
                     {% csrf_token %}
-                    <label for="password" class="form-label" style="color: white; text-align: left; width: 20rem; margin-bottom: 0;">Username</label>
+                    <label for="password" class="form-label" style="text-align: left; width: 20rem; margin-bottom: 0;">Username</label>
                      {% render_field form.username class="form-control" autocomplete="off" placeholder="Username" %}
-                    <label for="password" class="form-label" style="color: white; text-align: left; width: 20rem; margin-bottom: 0;">Password</label>
+                    <label for="password" class="form-label" style=" text-align: left; width: 20rem; margin-bottom: 0;">Password</label>
                      {% render_field form.password class="form-control" autocomplete="off" placeholder="Password" %}
                      <input class="btn-first" type="submit" name="" value="Login">
 
