--- a/templates/exam/logout.html
+++ b/templates/exam/logout.html
@@ -18,6 +18,7 @@
       color: #ffffff;
       font-weight: bolder;
       font-family: "Poppins";
+      margin-top: 8%;
     }
 
     span {
@@ -27,12 +28,11 @@
     .text {
       font-size: 4rem;
     }
+
   </style>
   <body class="body-style">
     {% include "exam/navbar.html" %}
     <br /><br /><br /><br /><br />
-    <!-- <img src="{% static "image/logout_img.png" %}"  style="width:800px; height:100px; padding-left:400px;"> -->
-
     <h2 class="text text-center">
       Logged Out <span>Successfully</span> <br />
       Thank you for using our platform!
