--- a/templates/student/student_exam.html
+++ b/templates/student/student_exam.html
@@ -19,11 +19,9 @@
     .row {
       margin: 100px;
     }
-
        .body-style{
     background-color: #060b27;
 }
-
  .btn-first {
     text-align: center;
     padding: 0.35rem;
@@ -54,7 +52,7 @@
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h6 class="panel-title">Available Courses</h6>
+      <h5 class="panel-title" style="text-align: center;">Available Courses</h5>
     </div>
     <table class="table table-hover table-bordered" id="dev-table">
       <thead>
@@ -76,5 +74,4 @@
 </div>
 
 </body>
-<br><br><br><br><br><br>
 <!-- {% endblock content %} -->
