--- a/templates/student/studentlogin.html
+++ b/templates/student/studentlogin.html
@@ -17,10 +17,11 @@
     <style media="screen">
       * {
     font-family: "Poppins",sans-serif;
+    color:black;
 }
 
 .body-style{
-    background-color: black;
+    background-color: #060b27;
 }
 
  .btn-first {
@@ -30,18 +31,19 @@
     border-width: 1px;
     border-color: transparent;
     border-radius: 0.3rem;
-    background-color: rgb(87, 111, 232);
+    background-color:black ;
     transition-property: color, rgb(87, 111, 232);
     transition-duration: 250ms, 250ms;
     transition-timing-function: ease, cubic-bezier(0.645, 0.045, 0.355, 1);
-    color: rgb(0, 0, 0);
+    color: white;
     font-size: 1rem;
     }
     .btn-first:hover{
-      border-color: rgb(255, 255, 255);
-    background-color: transparent;
-    color: rgb(255, 255, 255);
+      border-color: none;
+    background-color: white;
+    color: black;
     text-decoration: none;
+    font-weight: 500;
     }
     
 .auth-wrapper {
@@ -55,7 +57,7 @@
 }
 
 .auth-div {
-  background-color: rgb(27, 27, 27);
+  background-color: #9ef4d9;
   text-align: center;
   padding: 3rem 5rem;
   border-radius: 10px;
@@ -75,21 +77,18 @@
 input[type="text"],input[type="password"] {
     margin-top:4px;
     border-style: solid;
-    border-width: 3px;
-    border-color:rgb(87, 111, 232);
+    border-width: 2px;
+    border-color:#121212;
     border-radius: 5px;
    
     
 }
 input[type="text"]:focus,input[type="password"]:focus{
-  transition-property: 0 8px 50px 0 rgba(0,0,0,0.5), border;
+  transition-property:#060b27, border;
   transition-duration: 300ms, 300ms;
   transition-timing-function: ease, ease;
 }
 
-input[type="text"]:hover,input[type="password"]:hover{
-    width: 
-}
 input[type="submit"] {
   width: 100%;
   padding: 8px 12px;
@@ -107,13 +106,13 @@ form{
     <img src="D:\projects\onlineAssessment\Untitled@1-1536x764.jpg" alt="">
     <div class="auth-wrapper ">
       <div class="auth-div animate__animated animate__fadeInDown animate__delay-1s">
-            <h1 style="font-family: Poppins,sans-serif; color: white;">Student <span style="color:rgb(87, 111, 232) ; margin-top: 2rem;" >Login</span> Form</h1>
+            <h1 style="font-family: Poppins,sans-serif;">Student <span style="color:rgb(87, 111, 232) ; margin-top: 2rem;" >Login</span> Form</h1>
                 <form class="box" method="post">
                     {% csrf_token %}
 
-                    <label for="email" class="form-label" style="color: white; text-align: left; width: 20rem; margin-bottom: 0;">Username</label>
+                    <label for="email" class="form-label" style="font-weight:500; text-align: left; width: 20rem; margin-bottom: 0;">Username</label>
                      {% render_field form.username class="form-control" autoCapitalize="off" autocomplete="off" placeholder="Username" %}
-                    <label for="password" class="form-label" style="color: white; text-align: left; width: 20rem; margin-bottom: 0;">Password</label>
+                    <label for="password" class="form-label" style="font-weight:500; text-align: left; width: 20rem; margin-bottom: 0;">Password</label>
                      {% render_field form.password class="form-control" autoCapitalize="off" autocomplete="off" placeholder="Password" %}
                      <input class="btn-first" type="submit" name="" value="Login">
                 </form>
