--- a/templates/teacher/teacherbase.html
+++ b/templates/teacher/teacherbase.html
@@ -5,6 +5,9 @@
 <head>
   <meta charset="utf-8">
   <style media="screen">
+    *{
+      color: black;
+    }
     a:link {
       text-decoration: none;
     }
@@ -16,14 +19,16 @@
 
     header {
       position: fixed;
-      background: #22242A;
+      background: #e6e6e6;
       padding: 20px;
       width: 100%;
-      z-index: 1;
+      z-index: 5;
+      border: 2px solid black;
+      color: #000000;
     }
 
     .left_area h3 {
-      color: #fff;
+      color: black;
       margin: 0px;
       text-transform: uppercase;
       font-size: 22px;
@@ -33,28 +38,8 @@
     .left_area span {
       color: #19B3D3;
     }
-
-    .logout_btn {
-      padding: 5px;
-      background:#ef5350;
-      text-decoration: none;
-      float: right;
-      margin-top: -30px;
-      margin-right: 40px;
-      border-radius: 5px;
-      font-size: 15px;
-      font-weight: 600;
-      color: #fff;
-      transition: 0.5s;
-
-    }
-
-    .logout_btn:hover {
-      background: #bb403e;
-    }
-
     .sidebar {
-      background: #2f323a;
+      background: #8aa1f7;
       margin-top: 70px;
       padding-top: 30px;
       position: fixed;
@@ -63,6 +48,10 @@
       height: 100%;
       transition: 0.5s;
       transition-property: left;
+      border-right: 50px;
+      border-top-right-radius: 12%;
+      border-bottom-right-radius: 10%;
+      border-bottom-left-radius: 10%;
     }
 
     .sidebar .profile_image {
@@ -73,13 +62,13 @@
     }
 
     .sidebar h4 {
-      color: #ccc;
+      color: black;
       margin-top: 0;
       
     }
 
     .sidebar a {
-      color: #fff;
+      color: black;
       display: block;
       width: 100%;
       line-height: 60px;
@@ -87,12 +76,12 @@
       padding-left: 40px;
       box-sizing: border-box;
       transition: 0.5s;
-
     }
 
     .sidebar a:hover {
-      background:  #969696;
+      background:  white;
       color:white;
+      text-decoration: none;
     }
 
     .sidebar i {
@@ -101,7 +90,7 @@
 
     label #sidebar_btn {
       z-index: 1;
-      color: #fff;
+      color: #000000;
       position: fixed;
       cursor: pointer;
       left: 300px;
@@ -112,7 +101,7 @@
     }
 
     label #sidebar_btn:hover {
-      color: #6b6b6b;
+      color: grey;
     }
 
     #check:checked~.sidebar {
@@ -148,7 +137,7 @@
 
      .btn-first {
       text-align: center;
-      padding: 0.35rem;
+      padding: 0.4rem;
     border-style: solid;
     border-width: 1px;
     border-color: transparent;
@@ -161,15 +150,16 @@
     font-weight: 500;
     font-size: 1rem;
     float:right;
-     margin-top: -30px;
+     margin-top: -25px;
       margin-right: 40px;
       width: 10%;
     }
-    .logout_btn:hover {
-      background-color: #2f323a;
-      color: white;
-      font-weight: bold;
-    }
+        .btn-first:hover {
+        border-color: none;
+        background-color: #060b27;
+        color: white;
+        text-decoration: none;
+      }
 
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
@@ -182,7 +172,7 @@
       <i style="left: 200px;margin-top: 17px;"class="fas fa-bars" id="sidebar_btn"></i>
     </label>
     <div class="left_area">
-      <h3>Online Exam</h3>
+      <h3 style="color: #000000;">Online Exam</h3>
     </div>
     <div class="right_area">
        <a href="/logout" class="btn-first" style="border-radius:5px;">Logout</a>
@@ -192,9 +182,9 @@
   <!--sidebar start-->
   <div class="sidebar">
     <center>
-      <img src="{% static "image/teacher.png" %}" class="profile_image" alt="">
-      <h4>{{request.user.first_name}}</h4>
-      <h6 style="color: rgb(255, 255, 255);">( Teacher )</h6>
+      <img style="margin-top: 2%;;"  src="{% static "image/teacher.png" %}" class="profile_image" alt="">
+      <h4 style="color: rgb(0, 0, 0);>{{request.user.first_name}}</h4>
+      <h6 style="color:black;">( Teacher )</h6>
     </center>
 
     <a href="/teacher/teacher-dashboard"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a>
